2010-02-09  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit test for bug #13490: Where clause 0=0 cannot be parsed

2010-02-07  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #12858: Provide an API to insert multiple rows at once
	* Fixed bug #13453: Method compileINSERT of ux_t3lib_sqlparser should be protected
	* Added feature #13209: MySQL extended INSERT statements cannot be parsed

2010-02-06  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit tests for bug #13430: Cannot parse INSERT when VALUES has no space before left parenthesis

2010-02-05  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13422: Invalid quoting of numeric column names

2010-02-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit tests for bug #13412: BETWEEN operator is not supported

2010-01-24  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13090: version warning with CSS styled content

2010-01-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13199: fileadminDir is hardcoded in several places (Thanks to Susanne Moog)

2010-01-08  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated copyright year

2010-01-05  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #13134: Support of SQL LOCATE function

2010-01-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #13135: Support for CASE WHEN flow control

2009-12-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.1.0

2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12603: sql_query does not respect "mapping"
	* Fixed bug #13104: SQL parser cannot parse escaped single quote in INSERT statement

2009-12-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated documentation: now using new documentation template
	* Updated documentation: removed obsolete information, added small cookbook for extension developers, added tutorials for Oracle and PostgreSQL

2009-12-13  Xavier Perseguers  <typo3@perseguers.ch>
