@@ -1,3 +1,7 @@
+2010-02-10  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #13504: Cannot parse TRUNCATE TABLE in install tool
+
 2010-02-09  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Added unit test for bug #13490: Where clause 0=0 cannot be parsed
